# todo-with-postgres-and-jwt-auth

./: .env  README.md  main.py  pyproject.toml
alembic/versions/: 7f1169462ceb_changed_the_table_s_nullable_and_unique_.py  87252c315ed8_create_todos_table.py  873560f168a8_create_todos_table.py  bb800a050792_added_user_id_to_the_todo_table_also.py  d6f06de9c3ad_applying_the_foreign_keys_to_the_todo_.py  f8f1732ac8af_added_the_completed_column_in_todo_table.py
config/: database.py
models/: sql_queries.txt  todo_model.py
routes/: todo_routes.py  user_routes.py
utils/: utils_helper.py
validations/: validation.py
